--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
         "viem": "2.21.58",
         "ts-jest": "^29.1.1",
         "@types/jest": "^29.5.11",
-        "jest": "^29.7.0"
+        "jest": "^29.7.0",
+        "@elizaos/plugin-solana": "^1.0.0",
+        "@elizaos/plugin-solana-agentkit": "^1.0.0"
     },
     "pnpm": {
         "overrides": {
