--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -65,6 +65,7 @@
         "typescript": "5.6.3"
     },
     "dependencies": {
+        "@elizaos/plugin-trustdb": "^1.0.0",
         "@ai-sdk/anthropic": "0.0.56",
         "@ai-sdk/google": "0.0.55",
         "@ai-sdk/google-vertex": "0.0.43",
